# catsbench

./: .gitignore  2d_gaussian.yaml  README.md  datasphere.yaml  datasphere_1.yaml  datasphere_2.yaml  datasphere_3.yaml  datasphere_4.yaml  environment.yml  pyproject.toml  requirements.txt  run.sh  run_2.sh  run_data_sphere.sh  run_dev.sh  test_baselines.sh  test_hd.sh  test_hd_matching.sh  test_hdg.sh  test_hdg_cnot.sh  test_hdg_matching.sh  test_images.sh  train.sh  train_all.sh  train_dlight_sb.sh  train_dlight_sb_m.sh  train_dlight_sb_m_d64.sh  train_hdg.sh  train_images.sh
benchmark_data/: D_benchmark_dim_16_P0_gaussian_prior_gaussian_log_num_categories_100_alpha_0.05.pth  D_benchmark_dim_2_P0_gaussian_prior_gaussian_log_num_categories_100_alpha_0.02.pth  D_benchmark_dim_64_P0_gaussian_prior_gaussian_log_num_categories_100_alpha_0.02.pth  X0_benchmark_dim_2_P0_gaussian.pt  X0_benchmark_dim_2_P0_gaussian_num_categories_100.pt  X0_benchmark_dim_2_P0_gaussian_prior_gaussian_log_num_categories_100_alpha_0.02.pt  X0_benchmark_dim_2_P0_gaussian_prior_uniform_num_categories_100_alpha_0.005.pt  X1_benchmark_dim_2_P0_gaussian_prior_gaussian_log_beta_0.02.pt  X1_benchmark_dim_2_P0_gaussian_prior_gaussian_log_beta_0.05.pt  X1_benchmark_dim_2_P0_gaussian_prior_gaussian_log_num_categories_100_alpha_0.02.pt  X1_benchmark_dim_2_P0_gaussian_prior_gaussian_log_num_categories_100_alpha_0.05.pt  X1_benchmark_dim_2_P0_gaussian_prior_gaussian_log_num_categories_100_beta_0.02.pt  X1_benchmark_dim_2_P0_gaussian_prior_gaussian_log_num_categories_100_beta_0.05.pt  X1_benchmark_dim_2_P0_gaussian_prior_uniform_beta_0.005.pt  X1_benchmark_dim_2_P0_gaussian_prior_uniform_beta_0.01.pt  X1_benchmark_dim_2_P0_gaussian_prior_uniform_num_categories_100_beta_0.005.pt  (+1 more)
configs/: config.yaml
(+679 files in other folders)
